test/fails/bad_tags/assign7.lgl
tag a is vec2;

void main() {
    int a = 5;  // Can't use a tag as a variable name
}